refactor (always use FileOperations to process documents) WIP